[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unibot"
version = "0.0.2a1"
description = "universal bot framework"
authors = [{ name = "Taffik" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
telegram = ["aiogram"]
vk = ["aiovk"]

[tool.setuptools.package-data]
"unibot" = ["py.typed"]
